--- a/Hysploit/Form1.resx
+++ b/Hysploit/Form1.resx
@@ -301,6 +301,21 @@
         xNkAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="button5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAARIAAACrCAYAAACqhRMqAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAAghJREFUeF7t1DEBADAMBKE6ef8qUxG3MmCBt+0ACpEAmUiATCRAJhIgEwmQiQTI
+        RAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRA
+        JhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIB
+        MpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJ
+        kIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlI
+        gEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhE
+        AmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAm
+        EiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEy
+        kQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiAaPcB2Lzasbmr
+        xNkAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIADKBwAAZgAAAICAAAABACAAKAgBADAIAABAQAAAAQAgAChCAABYEAEAMDAAAAEA
