--- a/Hysploit/Changelog.resx
+++ b/Hysploit/Changelog.resx
@@ -118,79 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gunaGradientPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAARIAAACrCAYAAACqhRMqAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAghJREFUeF7t1DEBADAMBKE6ef8qUxG3MmCBt+0ACpEAmUiATCRAJhIgEwmQiQTI
-        RAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRA
-        JhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIB
-        MpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJ
-        kIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlI
-        gEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhE
-        AmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAm
-        EiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEy
-        kQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiAaPcB2Lzasbmr
-        xNkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAARIAAACrCAYAAACqhRMqAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAghJREFUeF7t1DEBADAMBKE6ef8qUxG3MmCBt+0ACpEAmUiATCRAJhIgEwmQiQTI
-        RAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRA
-        JhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIB
-        MpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJ
-        kIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlI
-        gEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhE
-        AmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAm
-        EiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEy
-        kQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiAaPcB2Lzasbmr
-        xNkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="button3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAARIAAACrCAYAAACqhRMqAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAghJREFUeF7t1DEBADAMBKE6ef8qUxG3MmCBt+0ACpEAmUiATCRAJhIgEwmQiQTI
-        RAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRA
-        JhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIB
-        MpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJ
-        kIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlI
-        gEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhE
-        AmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAm
-        EiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEy
-        kQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiAaPcB2Lzasbmr
-        xNkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAARIAAACrCAYAAACqhRMqAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAghJREFUeF7t1DEBADAMBKE6ef8qUxG3MmCBt+0ACpEAmUiATCRAJhIgEwmQiQTI
-        RAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRA
-        JhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIB
-        MpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJ
-        kIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlI
-        gEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhE
-        AmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAm
-        EiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEy
-        kQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiAaPcB2Lzasbmr
-        xNkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="button5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAARIAAACrCAYAAACqhRMqAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAghJREFUeF7t1DEBADAMBKE6ef8qUxG3MmCBt+0ACpEAmUiATCRAJhIgEwmQiQTI
-        RAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRA
-        JhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIB
-        MpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJ
-        kIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlI
-        gEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAmEiATCZCJBMhE
-        AmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEykQCZSIBMJEAm
-        EiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiATCRAJhIgEwmQiQTIRAJkIgEy
-        kQCZSIBMJEAmEiATCZCJBMhEAmQiATKRAJlIgEwkQCYSIBMJkIkEyEQCZCIBMpEAmUiAaPcB2Lzasbmr
-        xNkAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAXSURBVChTY5CXl/9PDB5ViBdTW6H8fwBf3ofxL6GN1gAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
